--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -162,7 +162,7 @@
                                         <tbody>
                                             <Div Width="Width.Max100">
                                                 <select class="form-select form-select" @onchange=ChangeStore>
-                                                    <option value="homeDelivery">@L["HomeDelivery"]</option>
+                                                    <option value="homeDelivery">@L["OrderDetailsHomeDelivery"]</option>
                                                     <option value="convenienceStore">@L["ConvenienceStore"]</option>
                                                 </select>
                                             </Div>
@@ -524,7 +524,7 @@
                                         <tbody>
                                             <Div Width="Width.Max100">
                                                 <select class="form-select form-select" @onchange=ChangeStore>
-                                                    <option value="homeDelivery">@L["HomeDelivery"]</option>
+                                                    <option value="homeDelivery">@L["OrderDetailsHomeDelivery"]</option>
                                                     <option value="convenienceStore">@L["ConvenienceStore"]</option>
                                                 </select>
                                             </Div>
