--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -347,7 +347,21 @@
                                                 <tbody>
                                                     <tr>
                                                         <td>@L["RecipientInformation"]</td>
-                                                        <td>@context.CustomerName / @context.CustomerPhone</td>
+                                                        @if (context.DeliveryMethod is not EnumValues.DeliveryMethod.DeliveredByStore) 
+                                                        {
+                                                            <td>@context.RecipientName / @context.RecipientPhone</td>
+                                                        }
+
+                                                        else
+                                                        {
+                                                            <td>
+                                                                <span>@L["Normal"] :- @context.RecipientNameDbsNormal / @context.RecipientPhoneDbsNormal</span>
+                                                                <hr />
+                                                                <span>@L["Freeze"] :- @context.RecipientNameDbsFreeze / @context.RecipientPhoneDbsFreeze</span>
+                                                                <hr />
+                                                                <span>@L["Frozen"] :- @context.RecipientNameDbsFrozen / @context.RecipientPhoneDbsFrozen</span>
+                                                            </td>
+                                                        }
                                                     </tr>
                                                     <tr>
                                                         <td>@L["ShippingMethod"]</td>
